code/human_written_tests/WebAssembly/processed_control_flow_validation/test_if_101.wast
(assert_invalid
  (module (func $type-param-void-vs-nums
    (block (if (param i32 f64) (i32.const 1) (then (drop) (drop))))
  ))
  "type mismatch"
)